Finishes lab 5